[project]
name = "unit-test-libs"
version = "0.1.0"
description = ""
authors = [
    {name = "GareArc",email = "chen4851@purdue.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

